--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 
 .lato-bold-italic {
     font-family: "Lato", sans-serif;
-    font-weight: 700;
+    font-weight: 400;
     font-style: italic;
     font-size: 18px;
 }
@@ -29,4 +29,103 @@
 .links{
     margin: 0 35px;
     color: #A62C31;
+}
+
+#dark{
+    padding-top: 4px;
+}
+#light{
+    padding-top: 8px;
+}
+.dark{
+    background-color: black;
+    color: white;
+}
+.light{
+    background-color: white;
+    color: black;
+}
+.theme-icon{
+    cursor: pointer;        
+}
+.active{
+    border: 1px solid black;
+}
+
+
+
+
+.footr{
+    width: 1518px;
+}
+.f{
+    background-color: #FEB6B6;
+    text-align: center;
+    color:#A62C31;
+    font-weight: bolder;
+    font-size: 18px;
+    font-family: 'Lora', serif;
+    padding: 5px 5px;
+    margin-bottom: -10px;
+    margin-left: -10px;
+    margin-right: -10px;
+}
+.ft{
+    margin-top: 10px;
+    font-family: 'Lora', serif;
+    background-color: #FEB6B6;
+    border-top:1px solid #F8EBCF;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 25px 10px;
+    color:#A62C31;
+    margin-left: -10px;
+    margin-right: -10px;
+}
+.ft .description{
+    font-size:18px;
+    color:#A62C31;
+}
+.description-f{
+    font-size: 18px;
+    color:#A62C31;
+}
+
+.ft .address{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    color:#A62C31;
+}
+.ft .address .mp{
+    text-decoration: none;
+    color:#A62C31;
+}
+.ft .call-us{
+    text-align: left;
+}
+.ft .call-us .cnt{
+    text-decoration: none;
+    color:#A62C31;
+}
+.ft .mail{
+    text-align: left;
+}
+.ft .mail .ml{
+    text-decoration: none;
+    color:#A62C31;
+}
+.ft2{
+    font-family: 'Lora', serif;
+    background-color: #FEB6B6;
+    color: #A62C31;
+    border-top:1px solid #A62C31;
+    font-size: 18px;
+    text-align: center;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    margin-bottom: -10px;
+    margin-left: -10px;
+    margin-right: -10px;
 }
