header footer added to about us page

--- a/css/contact.css
+++ b/css/contact.css
@@ -54,10 +54,9 @@
     padding-top: 20px;
 }
 
-
 .ta{
-    margin-left: 20px;
-    padding-left: 70px;
+    margin-left: 16px;
+    width: 280px;
 }
 #enquireBtn{
     margin: 35px 60px;
