--- a/css/review.css
+++ b/css/review.css
@@ -1,9 +1,10 @@
-.body{
+.reviewbody{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content:center ;
-    margin: 30px ;
+    margin-top: 30px ;
+    
 }
 .container {
      display: flex;
@@ -25,9 +26,13 @@
     border-radius: 0.5rem;
     text-align: center;
 }
-
-#rating{
+.card h1{
+    font-size: 32px;
+    font-weight: bold;
+}
+.rating{
     text-align: center;
+    font-size: 22px ;
 }
     
 .star {
@@ -48,12 +53,12 @@
     justify-content: center;
     margin: 20px;
     margin-bottom: 0;
-    font-size: 25px;
+    font-size: 22px;
     font-weight:bold;       
 }
         
 .sbtn{
-    font-size: 30px ;
+    font-size: 22px ;
     padding: 5px 30px;
     margin: 25px;
     border: none;
