--- a/css/about.css
+++ b/css/about.css
@@ -27,16 +27,11 @@
    border: 8px solid #ece6e7;
    box-shadow: 0 0 10px 2px #bab9ba ;
 }
-.about-image{
-    width: 600px;
-    position: relative;
-    left: 14%;
-    margin:25px 15px;
-}
-.about-im{
-    height:450px ;
-    width: 950px;
+
+.slide-img{
+  
+    width: 980px;
+    margin: 50px 260px;
     border: 13px solid #ece6e7;
     box-shadow: 0 0 10px 2px #bab9ba ;
-    margin: 30px;
 }
