social links added in footer

--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,11 @@
     margin-left: -10px;
     margin-right: -10px;
 }
+.social-logo{
+    height: 30px;
+    margin: 0 20px;
+    padding-left: 20px;
+}
 .ft{
     margin-top: 10px;
     font-family: 'Lora', serif;
