--- a/css/services.css
+++ b/css/services.css
@@ -1,3 +1,6 @@
+body{
+    background-color: #f7f6f6;
+}
 .page-heading{
     text-align: center;
     font-size: 32px;
@@ -13,7 +16,25 @@
 .service-card{
     margin-left:70px;
     margin-top: 30px;
+    background-color: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 .service-img{
     height: 200px;
+}
+.know-btn{
+    margin:15px 40px;
+    width: 70%;
+	height: 30px;
+	justify-content: center;
+	display: block;
+	color: white;
+	background:#A62C31;
+	font-size: 1em;
+	outline: none;
+	border: none;
+	border-radius: 5px;
+	transition: .2s ease-in;
+	cursor: pointer;
+    border-radius: 20px;
 }
