--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,9 @@
     font-size: 18px;
 }
 
+body{
+    background-color: #f7f6f6;
+}
 .custom-navbar{
     background-color: #FEB6B6;
 }
@@ -38,11 +41,11 @@
     padding-top: 8px;
 }
 .dark{
-    background-color: rgb(99, 99, 99);
+    background-color: rgb(42, 42, 42);
     color: white;
 }
 .light{
-    background-color: white;
+    background-color: #f7f6f6;
     color: black;
 }
 .theme-icon{
