1st section adjustment

--- a/css/index.css
+++ b/css/index.css
@@ -8,14 +8,15 @@ body{
 .Body-section{
     display: flex;
     flex-direction: row;
-    margin-left: 100px;
+    padding-left: 100px;
 }
 .section1{
     width: 900px;
     padding: 5px;
+    padding: 30px 20px;
 }
 .section1-text{
-    padding: 150px 30px;
+    padding: 220px 30px;
 }
 .btn{
     font-size: 22px ;
