container text color fixed

--- a/css/about.css
+++ b/css/about.css
@@ -45,6 +45,7 @@ body{
     margin-left: 450px;
     background-color: #FFE5E6;
     padding: 25px;
+    color: black;
 }
 .review-logo{
     height: 70px;
