--- a/css/index.css
+++ b/css/index.css
@@ -12,24 +12,30 @@ body{
 .section1{
     width: 900px;
     padding: 5px;
-    padding: 30px 20px;
+    padding: 25px 20px;
 }
 .section1-text{
-    padding: 220px 30px;
+    padding: 170px 30px;
 }
 .btn{
+    cursor: pointer;
     font-size: 22px ;
     padding: 5px 30px;
     margin: 25px;
     border: none;
-    background:#A62C31;
+    background-color:#A62C31;
     color: white;
     border-radius: 50px;
-    cursor: pointer;
+  
 }
-
+.appoinment-link{
+    text-decoration: none;
+    color: white;
+}
 .im{
     border-radius: 10px;
+    height: 650px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 .section2-heading{
     text-align: center;
@@ -89,7 +95,4 @@ body{
     height: 400px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-}
-.appoinment-link{
-    text-decoration: none;
 }
