--- a/css/index.css
+++ b/css/index.css
@@ -95,3 +95,35 @@ body{
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
+#image-js{
+    display: none;
+}
+.modal{
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    overflow: auto;
+}
+.modal-content{
+    background-color: #fefefe;
+    margin: 12% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 600px;
+    border-radius: 5px;
+   align-items: center;
+}
+.close{
+    color: #aaa;
+    float: right;
+    cursor: pointer;
+    position: absolute;
+    top: -1px;
+    right: 10px;
+}
