js for image applied for all service images

--- a/css/index.css
+++ b/css/index.css
@@ -98,6 +98,27 @@ body{
 #image-js{
     display: none;
 }
+#image-js1{
+    display: none;
+}
+#image-js2{
+    display: none;
+}
+#image-js3{
+    display: none;
+}
+#image-js4{
+    display: none;
+}
+#image-js5{
+    display: none;
+}
+#image-js6{
+    display: none;
+}
+#image-js7{
+    display: none;
+}
 .modal{
     display: none;
     position: fixed;
