--- a/css/index.css
+++ b/css/index.css
@@ -148,3 +148,50 @@ body{
     top: -1px;
     right: 10px;
 }
+#work1{
+    display: none;
+}
+#work2{
+    display: none;
+}
+#work3{
+    display: none;
+}
+#work4{
+    display: none;
+}
+#work5{
+    display: none;
+}
+#work6{
+    display: none;
+}
+.modal1{
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    overflow: auto;
+}
+.modal-content1{
+    background-color: #fefefe;
+    margin: 6% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 90%;
+    max-width: 800px;
+    border-radius: 5px;
+   align-items: center;
+}
+.close1{
+    color: #aaa;
+    float: right;
+    cursor: pointer;
+    position: absolute;
+    top: -1px;
+    right: 10px;
+}
