--- a/css/login.css
+++ b/css/login.css
@@ -7,7 +7,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color:#f5efef ;
+    color: black;
 }
 .formcontainer {
     display: flex;
