--- a/css/register.css
+++ b/css/register.css
@@ -7,8 +7,8 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color:#f5efef ;
     margin-bottom: 180px;
+    color: black;
 }
 .formcontainer {
     display: flex;
