small screen media query for home page

--- a/css/index.css
+++ b/css/index.css
@@ -183,7 +183,7 @@ body{
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
-    max-width: 800px;
+    max-width: 600px;
     border-radius: 5px;
    align-items: center;
 }
@@ -194,4 +194,54 @@ body{
     position: absolute;
     top: -1px;
     right: 10px;
+}
+
+
+@media (min-width: 500px) and (max-width: 768px){ 
+    .Body-section{
+        display: flex;
+        flex-direction: column;
+    }
+    .section1-text{
+        padding: 15px 10px;
+    }
+    .section1{
+        width: 400px;
+        padding: 5px;
+    }
+    .im{
+        height: 420px;
+    }
+    .section2-img{
+        margin-left: 120px;
+        display: flex;
+        flex-direction: column;
+        margin-top: 20px;
+    }
+    .img-name{
+        padding-right: 190px;
+        margin-bottom: 20px;
+    }
+    .section2-text{
+        margin-left: 60px;
+        text-align: center;
+        width: 500px;
+    }
+    .Body-section3{
+        display: flex;
+        flex-direction: column;
+        padding-left: 50px;
+        margin-top: 140px;
+    }
+    .section3-text{
+        margin-top: 20px;
+        margin-left: 50px ;
+        text-align: start;
+        width: 350px;
+    }
+    .section4-sub{
+        display: flex;
+        flex-direction: column;
+        margin-left: 65px;
+    }
 }
